--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html,body{
     margin-top: 10%;
+    background-color:bisque;
     text-align: center;
 }
 span{
@@ -41,4 +42,5 @@ h2{
     width:100px;
     font-size: 16px;
     font-weight: bold;
+
 }
